--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=be4fe42f9a1110752538a794c52d045b
 ###< symfony/framework-bundle ###
 
