--- a/.env.prod
+++ b/.env.prod
@@ -3,8 +3,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_DEBUG=1
+APP_ENV=prod
+APP_DEBUG=0
 ###< symfony/framework-bundle ###
 
 # DATABASE CONNEXION
