--- a/.env.dev
+++ b/.env.dev
@@ -6,6 +6,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_SECRET=be4fe42f9a1110752538a794c52d045b
 APP_DEBUG=1
 ###< symfony/framework-bundle ###
 
