--- a/.env.prod
+++ b/.env.prod
@@ -4,6 +4,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/framework-bundle ###
 APP_ENV=prod
+APP_SECRET=be4fe42f9a1110752538a794c52d045b
 APP_DEBUG=0
 ###< symfony/framework-bundle ###
 
